--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   </head>
   <body>
     <h1>Hello World!</h1>
-    <p>Do you wanna play Brawl Stars?</p>
+    <p> This is the first page </p>
   </body>
 
 </html>
