--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
   </head>
   <body>
-    <h1>Hello World!</h1>
-    <p> This is the first page </p>
+    <h1>Funny dog!</h1>
+    <p> This is the first page with a funny dog </p>
     <img src="foto-kota-kotorogo-ukusila-pchela-v-nos-4.jpg">
   </body>
 
