--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <body>
     <h1>Funny dog!</h1>
     <p> This is the first page with a funny dog </p>
-    <img src="foto-kota-kotorogo-ukusila-pchela-v-nos-4.jpg">
+    <img src="image001-9.jpg">
   </body>
 
 </html>
