--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   </head>
   <body>
     <h1>Funny dog!</h1>
-    <p> This is the first page with a funny dog </p>
+    <p><font size="8" color="purple">This is the first page with a funny dog</font></p>
     <img src="image001-9.jpg">
   </body>
 
