--- a/index.html
+++ b/index.html
@@ -3,8 +3,13 @@
   <head>
   </head>
   <body>
-    <h1>Funny dog!</h1>
-    <p><font size="8" color="purple">This is the first page with a funny dog</font></p>
+    <h1><font size="10" color="red">Funny dog!</font></h1>
+    <p><font size="9" color="orange">This is the first page with a funny dog</font></p>
+    <p><font size="8" color="yellow">This is the first page with a funny</font></p>
+    <p><font size="7" color="green">This is the first page with a</font></p>
+    <p><font size="6" color="blue">This is the first page with</font></p>
+    <p><font size="5" color="dark blue">This is the first page</font></p>
+    <p><font size="4" color="purple">This is the first</font></p>
     <img src="image001-9.jpg">
   </body>
 
