--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <style type="text/css">
+    body {
+        backgroung-color: RGB(199, 137, 238);
+    }
+    </style>
   </head>
   <body>
     <h1><font size="10" color="red">Funny dog!</font></h1>
