--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="UTF-8">
+    <title>DOG</title>
     <style type="text/css">
     body {
         backgroung-color: RGB(199, 137, 238);
