--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>DOG</title>
     <style type="text/css">
     body {
-        backgroung-color: RGB(199, 137, 238);
+        background-color: RGB(199, 137, 238);
     }
     </style>
   </head>
