--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>DOG</title>
+    <title>UwU</title>
     <style type="text/css">
-    body {
-        background-color: RGB(199, 137, 238);
-    }
+     html {
+      height: 100%;
+      background: #000 url(images/EAoe.gif)
+     }
     </style>
   </head>
   <body>
