--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
      html {
       height: 100%;
       background: #000 url(images/EAoe.gif)
+            no-repeat right bottom;
+      color: #fff;
      }
     </style>
   </head>
