--- a/index.html
+++ b/index.html
@@ -2,25 +2,19 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>UwU</title>
+    <title>Gleb Kulikov</title>
     <style type="text/css">
-     html {
-      height: 100%;
-      background: #000 url(images/EAoe.gif)
-            no-repeat right bottom;
-      color: #fff;
-     }
+    body {
+        background-color: RGB(0, 0, 0);
+    }
     </style>
   </head>
   <body>
-    <h1><font size="10" color="red">Funny dog!</font></h1>
-    <p><font size="9" color="orange">This is the first page with a funny dog</font></p>
-    <p><font size="8" color="yellow">This is the first page with a funny</font></p>
-    <p><font size="7" color="green">This is the first page with a</font></p>
-    <p><font size="6" color="blue">This is the first page with</font></p>
-    <p><font size="5" color="dark blue">This is the first page</font></p>
-    <p><font size="4" color="purple">This is the first</font></p>
-    <img src="image001-9.jpg">
+    <h1><font size="7" color="white">This is page with information about me.</font></h1>
+    <p><font size="6" color="white">I am a student at a financial university under the government of the Russian Federation.</font></p>
+    <p><font size="6" color="white">I'm in my second year.</font></p>
+    <p><font size="6" color="white">My faculty - ITaBDA (Information Technology and Big Data Analysis)</font></p>
+    <div align="center"><img src="WswC5qXtPvs.jpg"></div>
   </body>
 
 </html>
