--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <p><font size="6" color="white">I am a student at a financial university under the government of the Russian Federation.</font></p>
     <p><font size="6" color="white">I'm in my second year.</font></p>
     <p><font size="6" color="white">My faculty - ITaBDA (Information Technology and Big Data Analysis)</font></p>
-    <div align="center"><img src="WswC5qXtPvs.jpg"></div>
+    <div align="center"><img src="WswC5qXtPvs.jpg" width="100" height="100"></div>
   </body>
 
 </html>
