--- a/index.html
+++ b/index.html
@@ -10,11 +10,14 @@
     </style>
   </head>
   <body>
+    <div align="center">
     <h1><font size="7" color="white">This is page with information about me.</font></h1>
+    <div align="center"><img src="WswC5qXtPvs.jpg" width="500" height="500"></div>  
     <p><font size="6" color="white">I am a student at a financial university under the government of the Russian Federation.</font></p>
     <p><font size="6" color="white">I'm in my second year.</font></p>
     <p><font size="6" color="white">My faculty - ITaBDA (Information Technology and Big Data Analysis)</font></p>
-    <div align="center"><img src="WswC5qXtPvs.jpg" width="100" height="100"></div>
+    </div>
+    
   </body>
 
 </html>
