--- a/Главная.html
+++ b/Главная.html
@@ -25,7 +25,7 @@
     <meta property="og:title" content="Главная">
     <meta property="og:type" content="website">
   </head>
-  <body data-home-page="Главная.html" data-home-page-title="Главная" class="u-body"><header class="u-clearfix u-header u-header" id="sec-8d14"><div class="u-align-left u-clearfix u-sheet u-sheet-1"></div></header>
+  <body class="u-body"><header class="u-clearfix u-header u-header" id="sec-8d14"><div class="u-align-left u-clearfix u-sheet u-sheet-1"></div></header>
     <section class="u-align-center u-clearfix u-section-1" id="carousel_4525">
       <div class="u-align-left u-black u-expanded-width u-shape u-shape-1"></div>
       <div class="u-clearfix u-gutter-0 u-layout-wrap u-layout-wrap-1">
